--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 应用配置
 APP_NAME=RSS News Aggregator
-APP_URL=https://your-domain.deno.dev
+APP_URL=https://kitt-news.deno.dev
 
 # 缓存配置（单位：毫秒）
 MEMORY_CACHE_TTL=600000
